# innopolis_vtol_dynamics

./: .gitignore  .gitmodules  README.md
.github/workflows/: build_appimage.yml  catkin_build.yml  docker.yml  sim_rpi.yml
configs/: ap_plane.yaml  ap_plane_dronecan.params  px4_plane_5kg.yaml  px4_quadplane_vtol_5kg.yaml
configs/dynamics/plane_5kg_px4_sitl/: params.yaml
configs/dynamics/quadplane_vtol_5kg_px4_sitl/: params.yaml
configs/px4/: dronecan.yaml
configs/px4/v1.14/standard_vtol/: airframe.yaml
scripts/: ap_plane.sh  build_appimage.sh  docker_wrapper.py  plane.sh  px4_vtol_sitl.sh  sim.py
src/ArdupilotInterface/include/ArdupilotInterface/: SocketExample.cpp  ardupilot_json_interface.hpp
src/MavlinkSimInterface/include/MavlinkSimInterface/: mavlink_sim_interface.hpp
src/MavlinkSimInterface/src/: mavlink_sim_interface.cpp
src/RosInterface/include/RosInterface/: ros_interface.hpp
src/Simulator/: CMakeLists.txt
src/Simulator/src/: main.cpp
